<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
   
    tools:context="com.whitedavidp.unistroke_keyboard.SettingsActivity" >
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_settings_instructions"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
    />
    
    <Button android:id="@+id/buttonInputSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_settings_button"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
    />
    
    <CheckBox android:id="@+id/checkFiles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load_from_files"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
    />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reload_gestures_instructions"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
    />
    
    <Button android:id="@+id/buttonReloadGestures"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reload_gestures"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
    />
    
    <CheckBox android:id="@+id/checkLogging"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable_logcat"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
    />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_strokes"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
    />
    
    <WebView
        android:id="@+id/viewHelp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
    />
    
</LinearLayout>
