<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.whitedavidp.unistroke_keyboard.SelectShortcutAppActivity" >

    <Spinner
        android:id="@+id/spinChooseApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
		android:layout_marginLeft="20dp"
	    android:layout_marginRight="20dp"
	    android:layout_marginTop="10dp"
        android:layout_below="@+id/chkIncludeSystem" />

    <Button
        android:id="@+id/btnOk"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/spinChooseApp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
	    android:layout_marginRight="20dp"
	    android:layout_marginTop="10dp"
	    android:layout_marginBottom="10dp"
        android:background="@color/colorPrimary"
        android:text="@string/ok" />
    
    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/btnOk"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
	    android:layout_marginRight="20dp"
	    android:layout_marginTop="10dp"
	    android:layout_marginBottom="10dp"
        android:background="@color/colorPrimary"
        android:text="@string/cancel" />

    <CheckBox
        android:id="@+id/chkIncludeSystem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
	    android:layout_marginTop="10dp"
        android:layout_alignLeft="@+id/spinChooseApp"
		android:layout_below="@+id/txtCurrentApp"
        android:text="@string/includeSystemApps" />
    
    <TextView
       	android:id="@+id/txtCurrentApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
	    android:layout_marginTop="10dp"
        android:text="@string/current_app" />

</RelativeLayout>